--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,5 +4,6 @@
     </head>
     <body>
         <h1>Bem vindo ao inicio de tudo!</h1>
+        <img src="https://www.iuemag.com/february2015/di/images/iu-e-magazine-to-begin-is-to-succeed-journey-literature-writer-start-creaive-talent-inspiring-share-quotes.jpg"/>
     </body>
 </html>
