--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <script src="/socket.io/socket.io.js">
-            const socket = io('http://localhost:3000');
+            const socket = io('https://messageglobal.herokuapp.com');
             socket.emit('test1', 'Testando comunicação via WebSocket.');
         </script>
     </head>
