--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="/socket.io/socket.io.js">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js">
             const socket = io('https://messageglobal.herokuapp.com:3000');
             socket.emit('test1', 'Testando comunicação via WebSocket.');
         </script>
