Testing new function (new_user)

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <h1>Bem vindo ao inicio de tudo!</h1>
+        <input id="email" type="email"/>
         <input id="name" type="text"/>
         <input id="password" type="password"/>
         <button onclick="send()">Enviar dados de login</button>
@@ -17,9 +18,13 @@
             });
             
             function send() {
+                var email = document.getElementById('email').value;
                 var name = document.getElementById('name').value;
                 var password = document.getElementById('password').value;
-                socket.emit('login', {name: name, password: password});
+                if (email !== '' && name !== '' && password !== '')
+                    socket.emit('new_user', {email: email, name: name, password: password});
+                else
+                    alert('Preencha todos os dados!');
             }
 
         </script>
