--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,7 +11,7 @@
         
         
         <script>
-            const socket = io('https://messageglobal.herokuapp.com');
+            const socket = io('http://messageglobalapp-com.umbler.net/');
             //const socket = io('http://192.168.1.66:3000');
             socket.on('connect', () => {
                 socket.emit('test1', 'Testando comunicação via WebSocket.');
