--- a/src/public/index.html
+++ b/src/public/index.html
@@ -16,6 +16,8 @@
             socket.on('connect', () => {
                 socket.emit('test1', 'Testando comunicação via WebSocket.');
             });
+
+            socket.on('_authenticating', (msg) => console.log(msg));
             
             function send() {
                 var email = document.getElementById('email').value;
